added modal, boostrapjs, and jquery

--- a/src/Styles/_bootstrap.scss
+++ b/src/Styles/_bootstrap.scss
@@ -13,3 +13,6 @@
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/tables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
+
+// Components w/ JavaScript
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/modals";
