--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -4,3 +4,19 @@
   display: none !important;
   visibility: hidden;
 }
+
+#retrieveModal{
+  width: 300px;
+  padding: 10px;
+  position: fixed;
+  top: 5%;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+  border: solid 1px #cbcbcb;
+  border-radius: 10px;
+  background: #fff;
+  z-index: 999;
+  box-shadow: 0px 0px 10px 5px #555;
+}
